@@ -1,3 +1,9 @@
+2014-10-25  Fred Kiefer <FredKiefer@gmx.de>
+
+	* Source/cairo/CairoGState.m (-compositeGState:...fraction:):
+	Disable workaround for cairo > 1.8 for cairo > 1.13.
+	Patch by Edwin Ancaer <eancaer@gmail.com>
+
 2014-05-24  Fred Kiefer <FredKiefer@gmx.de>
 
 	* configure.ac: Fix wrong assumption about Xft's .pc file that
